# rust-webassembly

./: README.md  jsconfig.json  package.json
crate/: Cargo.toml
crate/src/: lib.rs
js/server/: server.js
js/server/routing/: routes.js
js/server/statics/: index.js
js/src/client/: index.html  main.js
