[package]
name = "rust-webassembly"
version = "0.1.0"
authors = ["Nicolas Abarca <nicoabarca02@gmail.com>"]
categories = ["wasm"]
description = "Rust WebAssembly starter with Parcel, Babel, Eslint, Express, Dotenv and more!"
license = "Apache-2.0/MIT"
readme = "./README.md"
repository = "https://github.com/NicolasAbarca/rust-webassembly"


[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"
wasm-bindgen = "0.2.29"

console_error_panic_hook = { version = "0.1.5", optional = true }

wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.6"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[features]
default = ["console_error_panic_hook"]
